--- a/web/src/main/resources/message_ru.properties
+++ b/web/src/main/resources/message_ru.properties
@@ -119,7 +119,7 @@ user.wasChangedPassword=Пароль изменен
 modal.changePassword.incorrectOldPassword=Неверный старый пароль
 event.wasSuccessUpdate=Информация о мероприятии обновлена
 event.UpdateTitle=Обновление информации
-eventEdit.warnMessage=Create property
+eventEdit.warnMessage=Введены данные неверного формата
 event.name=Мероприятие:
 user.fullName=Пользователь:
 message.text=Текст:
@@ -155,3 +155,10 @@ user.state=Статус:
 button.unblocked= Разблокировать
 text.ticketUnSuccessSale=Create property
 ticketSale.noDatesAvailable=Сейчас нет доступных дат, следите за объявлениями на сайте.
+header.title.first=Мы предлагаем
+header.title.second=проведение праздников для вас и ваших детей
+ticket.number=№
+ticket.date=Дата:
+ticket.eventName=Представление/Квест:
+ticket.count=Количество:
+ticket.state=Тип оплаты:
